# HybGe-Flow3D

./: CMakeLists.txt  README.md
documentation/: Doxyfile  mainpage.dox
documentation/html/: annotated.html  annotated_dup.js  classes.html  classhgf_1_1mesh_1_1voxel-members.html  classhgf_1_1mesh_1_1voxel.html  classhgf_1_1models_1_1stokes-members.html  classhgf_1_1models_1_1stokes.html  classhgf_1_1models_1_1stokes.js  classhgf_1_1models_1_1uniform__porenetwork-members.html  classhgf_1_1models_1_1uniform__porenetwork.html  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_08d6cd1c1b635c58e6a2b0d281bf2cad.html  dir_103fc15b20f552cd8c0016df587305f5.html  dir_1780fe865d9ef6a5dc1249cc88d04abb.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7be0d8c199b9408ae01f5d77515b8def.html  dir_93287aa57a2806f5f547b73a619823dd.html  dir_a0c8e78eab9a26b124b9964574b86472.html  dir_bdeba5f06b852fec80257c0bf4c3c36e.html  dir_c92c4e76f9fdf606f30605fe2e381bd0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  hgflow_8hpp_source.html  index.html  menudata.js  mesh_8hpp_source.html  model__porenetwork_8hpp_source.html  model__stokes_8hpp_source.html  models_8hpp_source.html  multiscale_8hpp_source.html  multiscale__flow_8hpp_source.html  namespacehgf.html  namespacehgf_1_1mesh.html  namespacehgf_1_1models.html  namespacehgf_1_1multiscale.html  namespacehgf_1_1multiscale_1_1flow.html  (+53 more)
documentation/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+35 more)
examples/permeability_inflow/: CMakeLists.txt  permeability.cpp
examples/permeability_tensor/: CMakeLists.txt  permeability_tensor.cpp
examples/permeability_x/: permeability.cpp
examples/poisson/: CMakeLists.txt  poisson.cpp
examples/poisson_homogeneous/: CMakeLists.txt  poisson_homogeneous.cpp
include/: model_poisson.hpp  model_stokes.hpp  models.hpp  multiscale_flow.hpp  types.hpp  utilities.hpp
src/mesh/: utilities.cpp  voxel.cpp
src/utility/: utilities.cpp
(+22 files in other folders)
