CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(libhgf)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
## OpenMP ##
FIND_PACKAGE(OpenMP REQUIRED)

## BOOST ##
FIND_PACKAGE(Boost COMPONENTS filesystem system REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

### LINEAR ALGEBRA PACKAGES ###
FIND_PACKAGE(PARALUTION REQUIRED)
INCLUDE_DIRECTORIES(${PARALUTION_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES("./include")

### FLAGS AND HGF SOURCES SECTION ###
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O2 -std=c++11")

file ( GLOB_RECURSE HEADERS
       "./include/*" )

file( GLOB_RECURSE SOURCES
	   "./src/*" )

SET(LIBRARY_SRCS ${HEADERS} ${SOURCES})

ADD_LIBRARY(hgf STATIC ${LIBRARY_SRCS})

TARGET_LINK_LIBRARIES( hgf
                       ${Boost_LIBRARIES}
                       ${PARALUTION_LIBRARIES} )

INSTALL(TARGETS hgf DESTINATION lib)
INSTALL(FILES ${HEADERS} DESTINATION include)

