CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(permeability)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
## OpenMP ##
FIND_PACKAGE(OpenMP REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O2 -std=c++11")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(HGF REQUIRED)
INCLUDE_DIRECTORIES(${HGF_INCLUDE_DIR})
SET(EXTERNAL_LIBS "${HGF_LIBRARY}")

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LIST(APPEND EXTERNAL_LIBS "${Boost_LIBRARIES}")

FIND_PACKAGE(PARALUTION REQUIRED)
INCLUDE_DIRECTORIES(${PARALUTION_INCLUDE_DIR})
LIST(APPEND EXTERNAL_LIBS "${PARALUTION_LIBRARY}")

FIND_PACKAGE(LAPACK REQUIRED)
LIST(APPEND EXTERNAL_LIBS "${LAPACK_LIBRARIES}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LAPACK_LINKER_FLAGS}")

SET(EXECUTABLE_SRCS ./permeability_tensor.cpp)

ADD_EXECUTABLE(permeability ${EXECUTABLE_SRCS})

TARGET_LINK_LIBRARIES( permeability
                       ${EXTERNAL_LIBS} )

